--- a/index.css
+++ b/index.css
@@ -1,4 +1,28 @@
+body {
+  background-color: #2c3e50;
+  color: #ecf0f1;
+}
+
 .reset,
 .toDosBtn {
   cursor: pointer;
+}
+
+@keyframes fadIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: fadIn 0.5s linear;
 }
