--- a/index.css
+++ b/index.css
@@ -1,7 +1,11 @@
-body {
+body,
+html {
   background-color: #2c3e50;
-  background-size: cover;
   color: #ecf0f1;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .reset,
@@ -18,6 +22,23 @@ body {
   }
 }
 
+body {
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+
+h3 {
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
 .bgImage {
   position: absolute;
   top: 0;
@@ -26,4 +47,27 @@ body {
   height: 100%;
   z-index: -1;
   animation: fadIn 0.5s linear;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.clock {
+  font-size: 10em;
+}
+
+.weather {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+}
+
+.location {
+  position: absolute;
+  bottom: 25px;
+  left: 25px;
 }
